# rust-wayland-power

./: .gitignore  .tmux.conf  .zshrc  README.md  bootstrap.sh  pkglist.txt  sidebar-toggle  sysScripts  tlp.conf
.config/gtk-4.0/: settings.ini
.config/hypr/: hyprland.conf  hyprlock.conf  keybinds_hyprland.txt
.config/mako/: config
.config/niri/: config.kdl  keybinds_niri.txt
.config/nvim/: keybinds_nvim.txt  lazy-lock.json
.config/rofi/: config-emoji.rasi
.config/rust-dotfiles/: config.toml.template  radio_favorites.json
.config/sway/: keybinds_sway.txt
.config/sway/UserConfigs/: Startup_Apps.conf  UserKeybinds.conf  WindowRules.conf
.config/waybar/: Modules  ModulesCustom  ModulesGroups  ModulesVertical  hyprConfig.jsonc.template  niriConfig.jsonc.template  swayConfig.jsonc.template
docs/: MANUAL_INSTALL.md
sysScripts/battery-daemon/: Cargo.toml
sysScripts/battery-daemon/src/: main.rs
sysScripts/cal-tui/: Cargo.toml  calendar_data.json
sysScripts/cal-tui/src/: app.rs  engine.rs  main.rs  model.rs  ui.rs
sysScripts/clip-manager/: Cargo.toml
sysScripts/clip-manager/src/: main.rs
sysScripts/cloudflare-toggle/: Cargo.toml
sysScripts/emoji-picker/: Cargo.toml
sysScripts/emoji-picker/src/: main.rs
sysScripts/install-wizard/: Cargo.toml
sysScripts/install-wizard/src/: main.rs
sysScripts/kb-launcher/: Cargo.toml
sysScripts/power-menu/: Cargo.toml
sysScripts/radio-menu/: Cargo.toml
sysScripts/rfkill-manager/: Cargo.toml
sysScripts/sidebar/: Cargo.toml
sysScripts/sidebar/src/: helpers.rs  main.rs  media.rs  style.rs  sysinfo.rs  ui.rs
sysScripts/sway-workspace/: Cargo.toml
sysScripts/update-check/: Cargo.toml
sysScripts/updater/: Cargo.toml
sysScripts/wallpaper-manager/: Cargo.toml
sysScripts/waybar-finance/: Cargo.toml
sysScripts/waybar-finance/src/: app.rs  config.rs  main.rs  network.rs  ui.rs
sysScripts/waybar-switcher/: Cargo.toml
sysScripts/waybar-weather/: Cargo.toml
sysScripts/waybar-weather/src/: main.rs
(+8 files in other folders)
