[package]
name = "wallpaper-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fs = "0.0.5"
walkdir = "2"
rayon = "1.8"
toml = "0.9.8"
dirs = "6.0.0"
image = "0.25.9"
notify = "8.2.0"

[[bin]]
name = "wp-daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "wp-select"
path = "src/bin/select.rs"

[[bin]]
name = "wp-apply"
path = "src/bin/apply.rs"
