[package]
name = "waybar-finance"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
futures = "0.3.31"
ratatui = "0.29.0"
reqwest = { version = "0.12.24", features = ["cookies", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["macros"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
yahoo_finance_api = "4.1.0"
